# microwakeword_trainer

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURAL_CONSTITUTION.md  BUG_FIXES_PR14_VALID.md  BUG_REPORT.md  BUG_STATUS_UPDATE.md  CHANGELOG.md  COMPATIBILITY_AUDIT_REPORT.md  CONSOLIDATED_BUG_REPORT.md  CRITICAL_BUGS.md  CRITICAL_FIXES_SUMMARY.md  DEVOPS_REVIEW_REPORT.md  DOCUMENTATION_REVIEW_REPORT.md  GUIDE.md  IMPLEMENTATION_PLAN.md  IMPROVEMENT_PLAN.md  MARCH_18_BUG_FIXES.md  MASTER_GUIDE.md  Makefile  PROJECT_HEALTH_REPORT.md  README.md  Start-Clustering.py  TEST_COVERAGE_ANALYSIS.md  TEST_COVERAGE_REPORT.md  TEST_RECOMMENDATIONS.md  TEST_SUMMARY.md  __init__.py  analyze_official_models.py  analyze_quant.py  cluster-Test.py  commands.md  commands.txt  compound-engineering.local.md  coverage.xml  debug_tensors.py  find_unused.py  implementation_plan.md  key_katya_scripts.sh  modes.py  (+15 more)
.full-review/: 00-scope.md  01-quality-architecture.md  01a-code-quality-raw.md  01b-architecture-raw.md  02-security-performance.md  02a-security-raw.md  02b-performance-raw.md  04-best-practices.md  04a-framework-raw.md  state.json
.full-review-archive-20260318-011746/: 01-quality-architecture.md  01a-code-quality-raw.md  02-security-performance.md  03-testing-documentation.md  03a-testing-raw.md  05-final-report.md  state.json
.github/instructions/: code-review.instructions.md
.github/workflows/: ci.yml  security.yml
.sisyphus/: boulder.json
.workflows/: unused-code-cleaner.workflow.json
claudedocs/: research_training_plateau_20260312.md
conductor/: product-guidelines.md  product.md  setup_state.json  tech-stack.md  tracks.md  workflow.md
config/: AGENTS.md  __init__.py  loader.py
config/overrides/: fast_5epoch.yaml
config/presets/: fast_test.yaml  max2.yaml  max_quality.yaml  max_quality2.yaml  standard.yaml
docs/: ARCHITECTURE.md  COMBINED_DOCUMENTATION.md  COMMANDS.md  CONFIGURATION.md  CONFIG_VARIABLES_GUIDE.md  CONTRIBUTING.md  ENVIRONMENT.md  EXPORT.md  GUIDE.md  IMPLEMENTATION_PLAN.md  INDEX.md  KNOWLEDGE_BASE.md  LOG_ANALYSIS_GUIDE.md  OFFICIAL_MODELS_ARCH_ANALYSIS.md  PERFORMANCE.md  PHONETIC_SCORER.md  POST_TRAINING_ANALYSIS.md  RESEARCH_REPORT_MIXED_PRECISION.md  SECURITY.md  TENSORBOARD_CONFIG.md  TRAINING.md  TROUBLESHOOTING.md  compliance_audit_2026-03-15.md  health_report_2026-03-15.md  my_environment.md
docs/plans/: 2026-03-16-001-comprehensive-codebase-audit-REPORT.md  2026-03-16-001-comprehensive-codebase-audit-plan.md
microwakeword_trainer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
models/exported/: manifest.json
official_mww_repo/: README.md  setup.py
official_mww_repo/microwakeword/: data.py  inception.py  inference.py  mixednet.py  model_train_eval.py  test.py  train.py  utils.py
scripts/: AGENTS.md  audio_analyzer.py  audio_similarity_detector.py  benchmark_reset.py  check_esphome_compat.py  ci.sh  cleanup_tfdata_cache.py  code_review_report.py  compare_models.py  count_audio_hours.py  count_dataset.py  debug_state_reset.py  debug_state_reset2.py  debug_streaming_gap.py  diagnose_savedmodel.py  eval_dashboard.py  evaluate_model.py  find_rich_tables.py  find_unused.py  full_reset_test.py  generate_test_dataset.py  install.sh  isolate_quantization_gap.py  phonetic_scorer.py  score_quality_fast.py  score_quality_full.py  split_audio.py  tidy_yaml.py  vad_trim.py  verify_esphome.py  verify_streaming.py
scripts/personal/: Zone.txt  auto-tune_prompt.md  cache-clean.txt  cleanup.sh  convert_keras_to_tflite.txt  model-git-links.txt  move_all_zero_files.py
specs/: implementation_status.md  phase1_complete.yaml  testing_plan.md
src/: __init__.py  pipeline.py
src/config/: __init__.py
src/data/: AGENTS.md  __init__.py  augmentation.py  clustering.py  dataset.py  features.py  hard_negatives.py  ingestion.py  preprocessing.py  quality.py  spec_augment_gpu.py  spec_augment_tf.py  tfdata_pipeline.py
src/evaluation/: AGENTS.md  __init__.py  calibration.py  fah_estimator.py  metrics.py  test_evaluator.py
src/export/: AGENTS.md  __init__.py  manifest.py  model_analyzer.py  tflite.py  tflite_utils.py  verification.py
src/model/: AGENTS.md  __init__.py  architecture.py  streaming.py
src/tools/: AGENTS.md  __init__.py  cluster_analyze.py  cluster_apply.py  help_panel.py  mine_hard_negatives.py
src/training/: AGENTS.md  __init__.py  async_miner.py  augmentation.py  miner.py  mining.py  performance_optimizer.py  profiler.py  rich_logger.py  tensorboard_logger.py  trainer.py
src/tuning/: AGENTS.md  __init__.py  autotuner.py  cli.py  dashboard.py  knobs.py  metrics.py  orchestrator.py  population.py
src/utils/: AGENTS.md  __init__.py  checkpoint_validation.py  label_guard.py  logging_config.py  optional_deps.py  path_utils.py  performance.py  performance_monitor.py  seed.py  terminal_logger.py  text_utils.py
tests/: conftest.py  test_utils.py
tests/fixtures/: .gitkeep
tests/integration/: test_pipeline_e2e.py  test_pipeline_regression.py  test_training.py
tests/unit/: test_async_miner.py  test_config.py  test_data_augmentation.py  test_data_features.py  test_data_preprocessing.py  test_data_quality.py  test_esphome_op_whitelist.py  test_evaluate_model_threshold_resolution.py  test_evaluation_calibration.py  test_evaluation_fah_estimator.py  test_evaluation_metrics.py  test_export_manifest.py  test_export_model_analyzer_and_verification.py  test_export_representative_dataset.py  test_export_tflite_metadata.py  test_metrics_target_fah.py  test_metrics_weighted.py  test_model_architecture_streaming.py  test_pipeline.py  test_spec_augment_tf.py  test_test_evaluator.py  test_training_async_validation.py  test_training_class_weights.py  test_training_mining_core.py  test_training_performance_optimizer.py  test_training_profiler.py  test_tuning_autotuner_components.py  test_tuning_bn_refresh_partition.py  test_tuning_cli.py  test_tuning_dashboard.py  test_tuning_integration.py  test_tuning_knobs.py  test_tuning_metrics.py  test_tuning_orchestrator.py  (+7 more)
tuning_output/: tuning_artifacts.json
(+16 files in other folders)
